try to add scss

--- a/src/assets/styles/mainStyles.scss
+++ b/src/assets/styles/mainStyles.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,600;0,700;1,200&display=swap');
 
-$mainColor: #3E1F5E;
-$textColor: #FFD600;
-$redColor: #E34D4D;
-$greenColor: #4DC861;
-$blueColor: #75C9E3;
+$main-color: #3E1F5E;
+$text-color: #FFD600;
+$red-color: #E34D4D;
+$green-color: #4DC861;
+$blue-color: #75C9E3;
 
-$smallText: 16px;
-$mediumText: 20px;
-$largeText: 24px;
+$small-text: 16px;
+$medium-text: 20px;
+$large-text: 24px;
