--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -11,3 +11,13 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+a {
+    text-decoration: none;
+}
+
+.dictionary:hover img {
+    width: 50px;
+    height: 50px;
+    
+}
