--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -16,8 +16,12 @@ a {
     text-decoration: none;
 }
 
-.dictionary:hover img {
-    width: 50px;
-    height: 50px;
+.dictionary {
+    &:hover {
+        img {
+        width: 50px;
+        height: 50px;
+    }
     
+}
 }
