--- a/src/components/FlashCard.scss
+++ b/src/components/FlashCard.scss
@@ -1,7 +1,7 @@
 .flashcard-wrapper {
     
     width: 40%;
-    margin: 0 auto;
+    margin: 50px auto;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     
@@ -11,27 +11,41 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+
     height: 50vh;
-    word-break: break-word; //breal-all?
+    word-break: break-word; //break-all?
 }
 
 .flashcard__title {
     flex-basis: 10%;
-    border: 1px solid red;
+    margin: 10px auto;
 }
 
 .flashcard__source {
     // flex-grow: 2;
     // height: 50%;
-    flex-basis: 50%;
+    flex-basis: 40%;
     font-size: 4rem;
-    margin: 0; 
-    border: 1px solid green;
+    margin: 10px auto; 
     
 }
 
 .flashcard__transcription {
-    flex-basis: 20%;
-    margin: 0;
-    border: 1px solid blue;
+    flex-basis: 15%;
+    margin: 0 auto 10px;
+}
+
+.translate-btn {
+    flex-basis: 10%;
+    width: 20%;
+    margin: 0 auto;
+    color: white;
+    background-color: rgb(56, 198, 79);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    border: none;
+    border-radius: 5px;
+
+    &:hover {
+        background-color: rgb(105, 225, 125);
+    }
 }
