change flashcard size in the new parent component

--- a/src/components/FlashCard.scss
+++ b/src/components/FlashCard.scss
@@ -1,7 +1,7 @@
 .flashcard-wrapper {
     
-    width: 40%;
-    margin: 50px auto;
+    width: 50%;
+    // margin: 20px auto;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     
