--- a/src/components/FlashCard.scss
+++ b/src/components/FlashCard.scss
@@ -41,7 +41,7 @@
 
 .translate-btn {
     font-size: 16px;
-    width: 25%;
+    // width: 25%;
     height: 35px;
     color: white;
     background-color: rgb(56, 198, 79);
