--- a/src/components/CardsContainer.scss
+++ b/src/components/CardsContainer.scss
@@ -14,4 +14,13 @@
     border-radius: 20px;
     width: 70px;
     height: 70px;
+    background-color: white;
+
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.75);
+    }
+
+    &:active {
+        box-shadow: 0px 2px 10px #343333 inset;
+    }
 }
