--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #3E1F5E;
 }
 
+
 footer {
-  height: 10vh;
+  height: 10%;
+  background-color: rgb(217, 217, 217);
 }
 
 
