--- a/src/components/FlashCard.scss
+++ b/src/components/FlashCard.scss
@@ -52,6 +52,11 @@
     border: none;
     border-radius: 5px;
 
+    &:focus {
+        outline: invert;
+        background-color: rgb(105, 225, 125);
+    }
+
     &:hover {
         background-color: rgb(105, 225, 125);
     }
