--- a/src/styles/scss/components/CardsContainer.scss
+++ b/src/styles/scss/components/CardsContainer.scss
@@ -1,7 +1,6 @@
 .cards-wrapper {
-  height: 50%;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .cards-container {
@@ -11,7 +10,7 @@
   gap: 5%;
 
   width: 80%;
-  margin: 0px auto;
+  margin: 0px auto 20px;
 }
 
 .back-btn,
@@ -29,4 +28,9 @@
   &:active {
     box-shadow: 0px 2px 10px #343333 inset;
   }
+}
+
+.learned-words {
+  font-size: 24px;
+  color: white;
 }
