--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,6 @@
-.main-header {
+@import "../../styles/scss/styles.scss";
+
+.header-wrapper {
   background-color: $yellow-color;
   position: sticky;
   top: 0px;
@@ -10,9 +12,8 @@
   padding: 0 15px;
 }
 
-.header__bar {
+.header {
   display: flex;
-  justify-content: space-between;
 }
 
 .logo-container {
@@ -20,21 +21,22 @@
 }
 
 .header__logo {
-  font-size: 22px;
+  font-size: $medium-text;
   color: $white-color;
   font-family: $logo-font;
   font-weight: 500;
 }
 
-.header__menu {
-  width: 40%;
-  border-radius: 0px 0px 50px 50px;
-  display: flex;
-  flex-direction: row;
-
-  justify-content: space-between;
+.header__nav {
   padding-top: 20px;
   padding-bottom: 20px;
+  display: flex;
+  flex-grow: 1;
+  gap: 3rem;
+}
+
+.header__nav-item:first-child {
+  margin-left: auto;
 }
 
 .logo,
@@ -54,5 +56,18 @@ a {
 
   &:hover {
     transform: scale(1.2);
+  }
+}
+
+@media (max-width: 767px) {
+  .header__nav {
+    font-size: $small-text;
+    gap: 1.5em;
+  }
+
+  .logo,
+  .icon {
+    width: 30px;
+    height: 30px;
   }
 }
