--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,3 +1,5 @@
+@import "../../styles/scss/styles.scss";
+
 .App {
   display: flex;
   flex-direction: column;
@@ -5,5 +7,5 @@
   text-align: center;
   width: 100%;
   height: 100vh;
-  background-color: #3e1f5e;
+  background-color: $violet-color;
 }
